--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,16 @@ jobs:
           pwd
           ls -l
           find . 
+
+    steps:
+    - name: Clonando el repositorio
+      uses: actions/checkout@v4
+
+    steps:
+      - name: "Paso 1"
+        run: | 
+          echo "Hola mundo"
+          hostname
+          pwd
+          ls -l
+          find . 
