--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Mi primera action
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,12 +21,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: "Paso 1"
-        run: | 
-          echo "Hola mundo "
+        run: |
+          echo "Hola mundo"
           hostname
           pwd
           ls -l
-          find . 
+          find .
 
     steps:
     - name: Clonando el repositorio
@@ -34,9 +34,9 @@ jobs:
 
     steps:
       - name: "Paso 1"
-        run: | 
+        run: |
           echo "Hola mundo"
           hostname
           pwd
           ls -l
-          find . 
+          find .
