--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: "Paso 1"
         run: |
-          echo "Hola mundo"
+          echo "Hola mundo x"
           hostname
           pwd
           ls -l
